# virtual-marketplace

./: README.md
client/: index.html  package-lock.json  package.json
client/src/components/: Browse.vue  Nav.vue  ProductPage.vue
client/src/pages/: Browse.vue  Welcome.vue  index.vue
client/src/plugins/: vuetify.js
server/: .gitignore  package-lock.json  package.json  pyproject.toml
server/djangoserver/: manage.py
server/djangoserver/djangoserver/: settings.py  urls.py
server/djangoserver/shop/: admin.py  auth.py  form.py  models.py  serializers.py  tests.py  urls.py  views.py
server/djangoserver/shop/migrations/: 0001_initial.py  0002_alter_listing_pub_date.py  0002_customuser_about.py  0003_customuser_profile_picture.py  0003_remove_listing_pub_date.py  0004_alter_customuser_about_alter_customuser_date_joined.py  0004_alter_listing_price.py  0005_listing_user_chat_message.py  0005_remove_listing_user.py  0006_listing_category.py  0006_transaction.py  0007_delete_user_alter_listing_category.py  0007_listing_pub_date.py  0008_listing_description_lookingfor.py  0009_rename_lookingfor_request_wishlist.py  0010_remove_request_description_request_title.py  0011_request_description.py  0012_remove_message_chat_remove_message_sender_and_more.py  0013_listing_featured.py  0014_listing_sold.py  0015_review_receiver_alter_customuser_is_active.py  0016_rename_receiver_review_recipient_transaction_buyer.py  0017_alter_review_stars.py  0018_alter_listing_featured.py
server/djangoserver/shop/templates/: browse.html  new_listing.html
server/src/: app.js
(+33 files in other folders)
