[tool.poetry]
name = "server"
version = "0.1.0"
description = "Server-side branch of the Virtual Marketplace project"
authors = ["Magdalena Słonińska <magdalena.sloninska@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.2"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.5.0"
pillow = "^11.0.0"
argon2-cffi = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
